// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button when no props other than children are passed into the component renders the default props and children to match the snapshot 1`] = `
<Button
  as="secondary"
  disabled={false}
  forwardRef={null}
  iconPosition="before"
  size="medium"
  subtext=""
  theme="blue"
>
  foo
</Button>
`;

exports[`Button when only the "iconPosition" and "iconType" props are passed into the component renders the default props and children to match the snapshot with the Icon after children 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  max-height: 40px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c1:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c1:focus {
  outline: solid 3px #E96400;
}

.c1 + .c0 {
  margin-left: 16px;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

<button
  className="c0 c1"
  data-component="button"
  disabled={false}
  role="button"
  size="medium"
>
  <span
    data-element="main-text"
  >
    foo
  </span>
  <span
    className="carbon-icon icon-filter"
    data-component="icon"
    data-element="filter"
  />
</button>
`;

exports[`Button when only the "iconPosition" and "iconType" props are passed into the component renders the default props and children to match the snapshot with the Icon before children 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  max-height: 40px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c1:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c1:focus {
  outline: solid 3px #E96400;
}

.c1 + .c0 {
  margin-left: 16px;
}

.c1 .carbon-icon {
  margin-left: 0px;
  margin-right: 8px;
}

<button
  className="c0 c1"
  data-component="button"
  disabled={false}
  role="button"
  size="medium"
>
  <span
    className="carbon-icon icon-filter"
    data-component="icon"
    data-element="filter"
  />
  <span
    data-element="main-text"
  >
    foo
  </span>
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "blue" matches the snapshot when default props are passed 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1:hover .c16 a,
.c1 .c16 a:hover {
  color: #FFF;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c2 + .c0 {
  margin-left: 16px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "grey" matches the snapshot when default props are passed 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1:hover .c16 a,
.c1 .c16 a:hover {
  color: #FFF;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c2 + .c0 {
  margin-left: 16px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "magenta" matches the snapshot when default props are passed 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1:hover .c16 a,
.c1 .c16 a:hover {
  color: #FFF;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c2 + .c0 {
  margin-left: 16px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "magenta-dull" matches the snapshot when default props are passed 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1:hover .c16 a,
.c1 .c16 a:hover {
  color: #FFF;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c2 + .c0 {
  margin-left: 16px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "red" matches the snapshot when default props are passed 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1:hover .c16 a,
.c1 .c16 a:hover {
  color: #FFF;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c2 + .c0 {
  margin-left: 16px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "white" matches the snapshot when default props are passed 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1:hover .c16 a,
.c1 .c16 a:hover {
  color: #FFF;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c2 + .c0 {
  margin-left: 16px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "blue" matches the snapshot with the default props 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1:hover .c16 a,
.c1 .c16 a:hover {
  color: #FFF;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c2 + .c0 {
  margin-left: 16px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "grey" matches the snapshot with the default props 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1:hover .c16 a,
.c1 .c16 a:hover {
  color: #FFF;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c2 + .c0 {
  margin-left: 16px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "magenta" matches the snapshot with the default props 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1:hover .c16 a,
.c1 .c16 a:hover {
  color: #FFF;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c2 + .c0 {
  margin-left: 16px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "magenta-dull" matches the snapshot with the default props 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1:hover .c16 a,
.c1 .c16 a:hover {
  color: #FFF;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c2 + .c0 {
  margin-left: 16px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "red" matches the snapshot with the default props 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1:hover .c16 a,
.c1 .c16 a:hover {
  color: #FFF;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c2 + .c0 {
  margin-left: 16px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "white" matches the snapshot with the default props 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1:hover .c16 a,
.c1 .c16 a:hover {
  color: #FFF;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c2 + .c0 {
  margin-left: 16px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button with href prop specified renders link properly 1`] = `
.c3 {
  display: inline-block;
}

.c3 a {
  font-size: 14px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #26A826;
}

.c3 a:hover {
  cursor: pointer;
  color: #006300;
}

.c3 a:focus {
  color: rgba(0,0,0,0.9);
  cursor: default;
  background-color: #FFDA7F;
  outline: none;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c4:hover .c2 a,
.c4 .c2 a:hover {
  color: #FFF;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: #255bc7;
  border: 1px solid transparent;
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .c2,
.c1 .c2 a {
  color: #FFF;
}

.c1:hover .c2 a,
.c1 .c2 a:hover {
  color: #FFF;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

<button
  className="c0 c1"
  href="link"
>
  <div
    className="c2 c3"
    disabled={false}
  />
</button>
`;

exports[`Button with to prop specified renders link properly 1`] = `
.c3 {
  display: inline-block;
}

.c3 a {
  font-size: 14px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #26A826;
}

.c3 a:hover {
  cursor: pointer;
  color: #006300;
}

.c3 a:focus {
  color: rgba(0,0,0,0.9);
  cursor: default;
  background-color: #FFDA7F;
  outline: none;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c4:hover .c2 a,
.c4 .c2 a:hover {
  color: #FFF;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: #255bc7;
  border: 1px solid transparent;
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .c2,
.c1 .c2 a {
  color: #FFF;
}

.c1:hover .c2 a,
.c1 .c2 a:hover {
  color: #FFF;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

<button
  className="c0 c1"
  to="link"
>
  <div
    className="c2 c3"
    disabled={false}
  />
</button>
`;
